demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:          # ✅ MUST be inside container
        - name: config
          mountPath: "/config"
          readOnly: true

  volumes:                    # ✅ MUST be inside spec (not inside container)
    - name: config
      configMap:
        name: devops-demo
        items:
          - key: level.properties
            path: level.properties
