pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-todo-pod
  namespace: django-todo-app
spec:
  containers:
  - name: django-todo-ctr
    image: rownakhayat/django-react-app:latest
    ports:
    - containerPort: 8001
