ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard
  namespace: django-todo-app 
spec:
  # ingressClassName: nginx-example
  rules:
  - host: "django-todo-exmaple.info"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
